# Pong_Alina_Weiss

./: CMakeLists.txt  README.md
PongGame/: CMakeLists.txt
PongGame/include/: ball.h  gameObject.h  paddle.h
PongGame/src/: ball.cpp  main.cpp  paddle.cpp
